--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-matplotlib==3.4.3
-numpy==1.21.2
-pandas==1.3.3
+matplotlib==3.5.2
+numpy==1.23.0
+pandas==1.4.3
 scikit-learn==1.0
-statsmodels==0.13.0
+statsmodels==0.13.1
+seaborn==0.11.2
+scikit-learn==1.0.2
+pydot==1.4.2
+tensorflow-macos==2.8.0
+tensorflow-metal==0.4.0
+Keras==2.8.0
+tensorflow-hub==0.12.0
+opencv-python==4.6.0.66
+protobuf<=3.20.1
