--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,20 @@
 jupyterlab==3.1.14
 matplotlib==3.4.3
-numpy==1.21.2
-pandas==1.3.3
+numpy==1.23.0
+pandas==1.4.3
 seaborn==0.11.2
-scikit-learn==1.0
+scikit-learn==1.0.2
 statsmodels==0.13.0
 pytest==6.2.5
 testbook==0.4.2
 mlflow==1.20.2
 parsenvy==3.0.2
 black==21.9b0
+pydot==1.4.2
+tensorflow-macos==2.8.0
+tensorflow-metal==0.4.0
+Keras==2.8.0
+tensorflow-hub==0.12.0
+opencv-python==4.6.0.66
+ipynb==0.5.1
+protobuf<=3.20.1
