--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+jupyterlab==3.1.14
 matplotlib==3.5.2
 numpy==1.23.0
 pandas==1.4.3
@@ -9,6 +10,7 @@ pydot==1.4.2
 tensorflow-macos==2.8.0
 tensorflow-metal==0.4.0
 Keras==2.8.0
+pytest==6.2.5
 tensorflow-hub==0.12.0
 opencv-python==4.6.0.66
 ipynb==0.5.1
